feat(ps-insp): manage PPM authority by user code