@@ -14,7 +14,7 @@ import java.util.stream.Collectors;
  * PS 지분 검사 설정 서비스 (공통코드 기반)
  *
  * <p>PPM 기준값: code_group 'PS_INSP_DEFAULT' > code 'PPM_LIMIT'
- * <p>PPM 수정 권한자: code_group 'PS_INSP_AUTH' > code 'PPM_ADMIN' (extraValue1에 콤마 구분 ID 목록)
+ * <p>PPM 수정 권한자: code_group 'PS_INSP_AUTH'의 활성 코드값(사용자 로그인 ID)
  */
 @Slf4j
 @Service
@@ -31,7 +31,7 @@ public class PsInspConfigService {
 
     /** 코드 키 상수 */
     public static final String CODE_PPM_LIMIT = "PPM_LIMIT";
-    public static final String CODE_PPM_ADMIN = "PPM_ADMIN";
+    private static final String LEGACY_PPM_ADMIN_CODE = "PPM_ADMIN";
 
     // ──────────── PPM 기준값 ────────────
 
@@ -74,24 +74,26 @@ public class PsInspConfigService {
         );
     }
 
-    // ──────────── 권한자 관리 (PS_INSP_AUTH > PPM_ADMIN 콤마 구분) ────────────
+    // ──────────── 권한자 관리 (PS_INSP_AUTH 사용자별 코드값) ────────────
 
     /**
      * PPM 수정 권한자 ID 목록 조회
      */
     public List<String> getPpmAdminIds() {
-        return codeDetailRepository.findByGroupCodeAndCode(GROUP_ADMIN, CODE_PPM_ADMIN)
-                .map(detail -> parseCommaSeparated(detail.getExtraValue1()))
-                .orElse(List.of());
+        return codeDetailRepository.findAllByGroupCode(GROUP_ADMIN).stream()
+                .filter(detail -> !LEGACY_PPM_ADMIN_CODE.equalsIgnoreCase(detail.getCode()))
+                .map(PsInspCodeDetail::getCode)
+                .toList();
     }
 
     /**
-     * 현재 사용자가 PPM 수정 권한이 있는지 확인
+     * 현재 사용자가 PPM 수정 권한이 있는지 확인한다.
+     * PS_INSP_AUTH의 활성 코드값 하나가 권한자 로그인 ID 한 명을 의미한다.
      */
     public boolean isPpmAdmin(String operatorId) {
         if (operatorId == null || operatorId.isBlank()) return false;
-        List<String> admins = getPpmAdminIds();
-        return admins.contains(operatorId.trim());
+        String loginId = operatorId.trim();
+        return getPpmAdminIds().stream().anyMatch(id -> id.equalsIgnoreCase(loginId));
     }
 
     /**
@@ -105,25 +107,58 @@ public class PsInspConfigService {
         verifyPpmAdmin(operatorId);
 
         List<String> cleanIds = adminIds.stream()
+                .filter(Objects::nonNull)
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
-                .distinct()
-                .collect(Collectors.toList());
+                .collect(Collectors.toMap(
+                        id -> id.toUpperCase(Locale.ROOT),
+                        id -> id,
+                        (first, ignored) -> first,
+                        LinkedHashMap::new
+                ))
+                .values().stream()
+                .toList();
 
         // 자기 자신은 항상 유지
-        if (!cleanIds.contains(operatorId)) {
-            cleanIds.add(operatorId);
+        if (cleanIds.stream().noneMatch(id -> id.equalsIgnoreCase(operatorId.trim()))) {
+            cleanIds = new ArrayList<>(cleanIds);
+            cleanIds.add(operatorId.trim());
         }
 
-        PsInspCodeDetail detail = codeDetailRepository
-                .findByGroupCodeAndCode(GROUP_ADMIN, CODE_PPM_ADMIN)
-                .orElseThrow(() -> new IllegalStateException("PPM_ADMIN 공통코드가 없습니다."));
+        List<PsInspCodeDetail> currentDetails = codeDetailRepository.findAllByGroupCode(GROUP_ADMIN).stream()
+                .filter(detail -> !LEGACY_PPM_ADMIN_CODE.equalsIgnoreCase(detail.getCode()))
+                .toList();
+        Long groupId = currentDetails.stream()
+                .findFirst()
+                .map(PsInspCodeDetail::getGroupId)
+                .orElseThrow(() -> new IllegalStateException("PS_INSP_AUTH 권한 코드가 없습니다."));
 
-        String value = String.join(",", cleanIds);
-        detail.updateExtraValue1(value);
-        codeDetailRepository.save(detail);
+        Set<String> requestedCodes = cleanIds.stream()
+                .map(id -> id.toUpperCase(Locale.ROOT))
+                .collect(Collectors.toSet());
+        Map<String, PsInspCodeDetail> existingByCode = currentDetails.stream()
+                .collect(Collectors.toMap(detail -> detail.getCode().toUpperCase(Locale.ROOT), detail -> detail));
 
-        log.info("[PS-INSP-CONFIG] PPM 권한자 목록 변경 - ids: {}, operator: {}", value, operatorId);
+        codeDetailRepository.deleteAll(currentDetails.stream()
+                .filter(detail -> !requestedCodes.contains(detail.getCode().toUpperCase(Locale.ROOT)))
+                .toList());
+        for (String userId : cleanIds) {
+            String code = userId.toUpperCase(Locale.ROOT);
+            if (!existingByCode.containsKey(code)) {
+                codeDetailRepository.save(PsInspCodeDetail.builder()
+                        .groupId(groupId)
+                        .code(code)
+                        .codeName(userId)
+                        .description("PS 지분검사 PPM 기준값 수정 권한 사용자 로그인 ID")
+                        .extraValue1(null)
+                        .extraValue2(null)
+                        .isActive(true)
+                        .sortOrder(100)
+                        .build());
+            }
+        }
+
+        log.info("[PS-INSP-CONFIG] PPM 권한자 코드 목록 변경 - ids: {}, operator: {}", cleanIds, operatorId);
         return cleanIds;
     }
 
@@ -156,15 +191,8 @@ public class PsInspConfigService {
         }
         if (!isPpmAdmin(operatorId)) {
             throw new IllegalArgumentException(
-                    "PPM 기준값 수정 권한이 없습니다. (현재 사용자: " + operatorId + ") 권한자 목록에 등록이 필요합니다.");
+                    "PPM 기준값 수정 권한이 없습니다. (현재 사용자: " + operatorId + ") PS_INSP_AUTH 사용자 코드 등록이 필요합니다.");
         }
     }
 
-    private static List<String> parseCommaSeparated(String value) {
-        if (value == null || value.isBlank()) return List.of();
-        return Arrays.stream(value.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
-    }
 }
